--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Her &amp; her</string>
+
+    <string name="posts_recent">Recent Posts</string>
 </resources>
