Finish the Stages activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Her &amp; her</string>
 
     <string name="posts_recent">Recent Posts</string>
+    <string name="stage_question">What stage of breast cancer do you have?</string>
 
     <string name="text1">is simply dummy text of the printing and typesetting industry.</string>
     <string name="text2">Demonstration of how a post with only text will look,
