--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Her &amp; her</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="or">OR</string>
+    <string name="user_name">Username</string>
+    <string name="email">Email</string>
+    <string name="country">Country</string>
+    <string name="creat_account">Creat account</string>
 </resources>
