--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,11 @@
     <string name="text1">is simply dummy text of the printing and typesetting industry.</string>
     <string name="text2">Demonstration of how a post with only text will look,
         is simply dummy text of the printing and typesetting industry.</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 
 </resources>
