Finished profile and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="user_name">Username</string>
     <string name="email">Email</string>
     <string name="country">Country</string>
-    <string name="creat_account">Creat account</string>
+    <string name="creat_account">Create account</string>
 
 
     <string name="posts_recent">Recent Posts</string>
